Comecei a escrever Conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Artigo1</p>
+            <h2>curso de html5 e css3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing eli
+                t. Nisi repellat, accusamus i
+                psam corporis nemo eligendi ab co
+                rrupti sed neque libero nesciunt delectus odit sit et 
+                maxime eius esse voluptates officiis!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Artigo2</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. S
+                unt error impedit nam quia repellat quo sit illo,
+                 quos odit sequi repellendus quam expedita dolores consequatur voluptatibus
+                 necessitatibus incidunt tempora saepe?</p>
         </article>
     </main>
 </body>
